--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,8 +5,8 @@
 
 @font-face {
     font-family: 'Avenir';
-    src: url('AvenirLTStd-Roman.woff2') format('woff2'),
-        url('AvenirLTStd-Roman.woff') format('woff');
+    src: url('/resources/fonts/AvenirLTStd-Roman.woff2') format('woff2'),
+        url('/resources/fonts/AvenirLTStd-Roman.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -14,8 +14,8 @@
 
 @font-face {
     font-family: 'Avenir';
-    src: url('Avenir-Black.woff2') format('woff2'),
-        url('Avenir-Black.woff') format('woff');
+    src: url('/resources/fonts/Avenir-Black.woff2') format('woff2'),
+        url('/resources/fonts/Avenir-Black.woff') format('woff');
     font-weight: 800;
     font-style: normal;
     font-display: swap;
@@ -23,8 +23,8 @@
 
 @font-face {
     font-family: 'Avenir';
-    src: url('AvenirLTStd-Black.woff2') format('woff2'),
-        url('AvenirLTStd-Black.woff') format('woff');
+    src: url('/resources/fonts/AvenirLTStd-Black.woff2') format('woff2'),
+        url('/resources/fonts/AvenirLTStd-Black.woff') format('woff');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -32,8 +32,8 @@
 
 @font-face {
     font-family: 'Avenir';
-    src: url('AvenirLTStd-Book.woff2') format('woff2'),
-        url('AvenirLTStd-Book.woff') format('woff');
+    src: url('/resources/fonts/AvenirLTStd-Book.woff2') format('woff2'),
+        url('/resources/fonts/AvenirLTStd-Book.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
