--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -42,3 +42,109 @@
 body {
     font-family: 'Avenir';
  }
+
+
+  @font-face {
+    font-family: 'Avenir';
+    src: url('fonts/Avenir-Black.woff2') format('woff2'),
+        url('fonts/Avenir-Black.woff') format('woff');
+    font-weight: 800;
+    font-style: normal;
+    font-display: swap;
+}
+      body {
+        font-family: "Avenir";
+        font-weight: normal;
+      }
+	  
+	  .footer-heading-title{
+		  color: #333;
+  font-family: "Avenir LT", Sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+	  }
+	  .footer{
+		  border-style: solid;
+  border-width: 1px 0px 0px 0px;
+  border-color: #EAEAEA;
+  transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+	  }
+      .ctm-container {
+        max-width: 1700px;
+        padding: 0px 30px;
+      }
+
+      .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  width: 100%;
+  left: 0;
+  z-index: 1;
+  top: 52px;
+  border-radius: 20px;
+  border-top: 1px solid  #ECECEC;
+  transition: 0.8s;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  padding: 40px 50px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.ctm-grd-one {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 16px;
+    row-gap: 32px;
+}
+.ctm-grd-two {
+    display: grid;
+    grid-template-columns: 32% 67%;
+    gap: 16px;
+}
+
+.mobileLeft-Sidebar {
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: #f7f7f7;
+  -webkit-box-shadow: 0 10px 30px 0 rgba(255,165,0,0);
+    box-shadow: 0 10px 30px 0 rgba(255,165,0,0);
+  overflow-x: hidden;
+  transition: 0.5s;
+  overflow-y: auto;
+}
+
+.mobile-dropdown-content {
+    background-color: #fff;
+    width: 100%;
+    border-radius: 20px;
+    border-top: 1px solid #ECECEC;
+    transition: 0.8s;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 20px;
+}
+
+@media (max-width: 1024px) {
+  .ctm-grd-one {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 16px;
+}
+.ctm-grd-two {
+    grid-template-columns: 1fr;
+    gap: 10px;
+}
+.prd-img {
+    height: auto;
+    padding: 10px!important;
+}
+.ctm-pt {
+  padding-top: 20px;
+}
+}
