--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -108,6 +108,7 @@ body {
     overflow-y: auto;
     width: 350px;
     border-radius: 0px 0px 0px 0px;
+    z-index: 10;
 }
 
 .mobile-dropdown-content {
