update design changes.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -186,7 +186,6 @@ body {
     background-color: #fff;
     color: #111;
     margin-bottom: 20px;
-    border-radius: 0.5rem;
 }
 
 .accordion-item-header {
@@ -341,9 +340,9 @@ body {
     width: 28px;
     height: 28px;
 }
-.accordion-item-header svg path {
+/* .accordion-item-header svg path {
     fill: #008c99;
-}
+} */
 /*single product page end */
 
 @media (max-width: 1024px) {
