update hotfixes changes.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -340,6 +340,9 @@ body {
     width: 28px;
     height: 28px;
 }
+.product-card-content p {
+    color: #008C99;
+}
 /* .accordion-item-header svg path {
     fill: #008c99;
 } */
