--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -341,7 +341,7 @@ body {
     height: 28px;
 }
 .product-card-content p {
-    color: #008C99;
+    color: #f5f5f5;
 }
 /* .accordion-item-header svg path {
     fill: #008c99;
