--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -343,6 +343,38 @@ body {
 .product-card-content p {
     color: #f5f5f5;
 }
+ .order-step .active span {
+    border-color: #31BA32;
+    color: #31BA32;
+  }
+
+  .order-step .active:after {
+    background-color: #31BA32;
+  }
+  #myTable {
+	border-collapse: collapse;
+	  width: auto;
+	  border: 1px solid #ddd;
+	  font-size: 14px;
+	  position: absolute;
+	  z-index: 9999;
+	  background: whitesmoke;
+	  display: none;
+
+	}
+
+	#myTable th, #myTable td {
+	  text-align: left;
+	  padding: 12px;
+	}
+
+	#myTable tr {
+	  border-bottom: 1px solid #ddd;
+	}
+
+	#myTable tr.header, #myTable tr:hover {
+	  background-color: #f1f1f1;
+	}
 /* .accordion-item-header svg path {
     fill: #008c99;
 } */
