--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -353,7 +353,7 @@ body {
   }
   #myTable {
 	    border-collapse: collapse;
-	  width: auto;
+	  width: 100%;
 	  border: 1px solid #ddd;
 	  font-size: 14px;
 	  position: absolute;
