--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -379,6 +379,9 @@ body {
 	  border-bottom: 1px solid #ddd;
 	}
 
+	.attribute_buttons_active{
+		box-shadow: 10px 5px 5px #9cc0fa;
+	}
 	/* #myTable tr.header, #myTable tr:hover {
 	  background-color: #f1f1f1;
 	} */
