--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -380,7 +380,7 @@ body {
 	}
 
 	.attribute_buttons_active{
-		box-shadow: 10px 5px 5px #9cc0fa;
+		box-shadow: 10px 5px 5px #ff9119;
 	}
 	/* #myTable tr.header, #myTable tr:hover {
 	  background-color: #f1f1f1;
