--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,104 +3,40 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: "Avenir LT" !important;
-    src: url("/resources/fonts/AvenirLTStd-Roman.woff2") format("woff2");
+    font-family: "Avenir LT", Sans-serif !important;
+    src: url("/resources/fonts/AvenirLTStd-Roman.woff2") format("woff2"),
+        url("/resources/fonts/AvenirLTStd-Roman.woff") format("woff");
     font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: "Avenir LT" !important;
-    src: url("/resources/fonts/Avenir-Black.woff2") format("woff2");
+    font-family: "Avenir LT", Sans-serif !important;
+    src: url("/resources/fonts/Avenir-Black.woff2") format("woff2"),
+        url("/resources/fonts/Avenir-Black.woff") format("woff");
     font-weight: 800;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: "Avenir LT" !important;
-    src: url("/resources/fonts/AvenirLTStd-Black.woff2") format("woff2");
+    font-family: "Avenir LT", Sans-serif !important;
+    src: url("/resources/fonts/AvenirLTStd-Black.woff2") format("woff2"),
+        url("/resources/fonts/AvenirLTStd-Black.woff") format("woff");
     font-weight: 900;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: "Avenir LT" !important;
-    src: url("/resources/fonts/AvenirLTStd-Book.woff2") format("woff2");
+    font-family: "Avenir LT", Sans-serif !important;
+    src: url("/resources/fonts/AvenirLTStd-Book.woff2") format("woff2"),
+        url("/resources/fonts/AvenirLTStd-Book.woff") format("woff");
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
-/* @font-face {
-    font-family: 'Avenir LT';
-    src: url('/resources/fonts/AvenirLTPro-Book.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-} */
-
-
-@font-face {
-    font-family: 'Avenir LT';
-    src: url('/resources/fonts/AvenirLTPro-Black.woff2') format('woff2');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Avenir LT';
-    src: url('/resources/fonts/AvenirLTPro-Light.woff2') format('woff2');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-}
-
-/* @font-face {
-    font-family: 'Avenir LT';
-    src: url('/resources/fonts/AvenirLTPro-Heavy.woff2') format('woff2');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-} */
-
-
-/* @font-face {
-    font-family: 'Avenir LT';
-    src: url('/resources/fonts/AvenirLTPro-MediumOblique.woff2') format('woff2');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-} */
-
-
-@font-face {
-    font-family: 'Avenir LT';
-    src: url('/resources/fonts/AvenirLTPro-Medium.woff2') format('woff2');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Avenir LT';
-    src: url('/resources/fonts/AvenirLTPro-Roman.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-/* @font-face {
-    font-family: 'Avenir LT';
-    src: url('/resources/fonts/AvenirLTPro-BookOblique.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-} */
-
-
 
 body {
     font-family: "Avenir LT", Sans-serif !important;
@@ -127,36 +63,44 @@ body {
     margin-right: auto;
 }
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #fff;
-    width: 100%;
-    left: 0;
-    z-index: 11;
-    top: 52px;
-    border-radius: 20px;
-    border-top: 1px solid #ececec;
-    transition: 0.8s;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    padding: 40px 50px;
-}
+
 
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
+
 .ctm-grd-one {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    -moz-column-gap: 16px;
     column-gap: 16px;
-    row-gap: 32px;
+    row-gap: 40px;
 }
+ 
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    width: 89%;
+    left: 50%;
+    z-index: 11;
+    top: 56px;
+    border-radius: 20px;
+    border-top: 1px solid #ececec;
+    transition: .8s;
+    box-shadow: 0 4px 4px #00000040;
+    padding: 40px 50px;
+    transform: translateX(-50%);
+}
+ 
 .ctm-grd-two {
     display: grid;
-    grid-template-columns: 32% 67%;
+    grid-template-columns: 27% 67%;
     gap: 16px;
 }
+
+
 
 .mobileLeft-Sidebar {
     position: fixed;
@@ -476,25 +420,11 @@ body {
 .product-outer-box {
     width: 50%;
 }
-header#app-site-header, .site-logo img, .nav-links, .top-navbar {
-    transition: 0.8s;
-}
-.header-small .site-logo img {
-    height: 40px;
-}
-.nav-links {
-    height: 80px;
-}
-.header-small .nav-links {
-    height: 50px;
-}
-.searchBar {
-    transition: .2s;
-}
 @media (max-width: 991px) {
     .product-outer-box {
         width: 100%;
-    }    
+    }
+    
 }
 
 @media (max-width: 1024px) {
