Revert "quote-generate-pdf and chnage shipping address"
This reverts commit 1b57e0a7935e2219e9a5e3e942a45fc33eda1cc2.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -439,6 +439,7 @@ body {
     text-align: right;
     display: flex;
     justify-content: end;
+    margin-top: 16px;
 }
 @media (max-width: 991px) {
     .product-outer-box {
