--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -58,7 +58,7 @@ body {
 }
 .ctm-container {
     max-width: 1700px;
-    padding: 0px 30px;
+    padding-inline: 30px;
     margin-left: auto;
     margin-right: auto;
 }
