--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -450,6 +450,50 @@ body {
 .swal-button-color{
     box-shadow: none!important;
 }
+
+/* vault page */
+.accordion-item-headers.active {
+  background: #00838f;
+  color: #fff;
+}
+.accordion-item-headers.accordion-item-headers-first.active {
+  border-radius: 16px 16px 0 0;
+}
+.accordion-item-headers::after {
+  content: "";
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: 14px;
+  font-size: inherit;
+  text-rendering: auto;
+  margin-right: 0;
+  transition: transform 0.3s;
+  position: absolute;
+  right: 15px;
+  top: 14px;
+  background-color: #f6f6f6;
+  background-image: url(https://bodypoint.dev/wp-content/uploads/2024/06/caret-bottom.svg);
+  background-repeat: no-repeat;
+  background-size: 12px;
+  background-position: center center;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+}
+
+.accordion-item-headers.active::after {
+    background-color: #D9FCFF;
+    background-image: url(https://bodypoint.dev/wp-content/uploads/2024/06/caret-top.svg);
+}
+
+.accordion-item-body {
+  transition: max-height 0.2s ease-out;
+}
+/* end vault page */
+
 @media (max-width: 991px) {
     .product-outer-box {
         width: 100%;
