--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -49,6 +49,7 @@ body {
     font-weight: 600;
     font-size: 20px;
 }
+
 .footer {
     border-style: solid;
     border-width: 1px 0px 0px 0px;
@@ -56,6 +57,7 @@ body {
     transition: background 0.3s, border 0.3s, border-radius 0.3s,
         box-shadow 0.3s;
 }
+
 .ctm-container {
     max-width: 1700px;
     padding-inline: 30px;
@@ -130,6 +132,7 @@ body {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     padding: 20px;
 }
+
 /* product page start */
 .ctm-prd-one {
     flex-direction: column;
@@ -157,6 +160,7 @@ body {
     border: 1px solid #ececec;
     height: 600px;
 }
+
 .img-showcase {
     display: flex;
     width: 100%;
@@ -255,6 +259,7 @@ body {
     display: inline;
     z-index: 1;
 }
+
 .grid-four {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -274,6 +279,7 @@ body {
     border-right: 1px solid #ececec;
     /* background-color: #fff; */
 }
+
 .size-button {
     display: flex;
     gap: 15px;
@@ -286,6 +292,7 @@ body {
     border: 1px solid #ececec;
     border-radius: 5px;
 }
+
 .right-price {
     display: flex;
     align-items: center;
@@ -296,12 +303,14 @@ body {
 .text-set {
     text-align: right;
 }
+
 .detactor {
     margin-top: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
 }
+
 .detactor-right {
     text-align: right;
 }
@@ -334,6 +343,7 @@ body {
     line-height: 24px;
     margin-bottom: 16px;
 }
+
 .productOverviewLeft p,
 .productOverviewLeft ul li {
     font-size: 16px;
@@ -342,6 +352,7 @@ body {
     margin-bottom: 16px;
     color: #6e6e73;
 }
+
 .productOverviewLeft h3 {
     font-size: 19px;
     font-weight: 600;
@@ -349,59 +360,93 @@ body {
     margin-bottom: 16px;
     color: #1d1d1f;
 }
+
 .accordion-item-header svg {
     width: 28px;
     height: 28px;
 }
+
 .product-card-content p {
     color: #f5f5f5;
 }
- .order-step .active span {
+
+.order-step .active span {
     border-color: #31BA32;
     color: #31BA32;
-  }
+}
 
-  .order-step .active:after {
+.order-step .active:after {
     background-color: #31BA32;
-  }
-  #myTable {
-	  border-collapse: collapse;
-	  width: 100%;
-	  border: 1px solid #ddd;
-	  font-size: 14px;
+}
+
+#myTable {
+    border-collapse: collapse;
+    width: 100%;
+    border: 1px solid #ddd;
+    font-size: 14px;
 
 
-	}
-    #myTable thead {
-        position: sticky;
-        background: #00838f;
-    }
+}
 
-	#myTable th {
-      font-size: 13px;
-	}
-	#myTable th, #myTable td {
-	  text-align: left;
-	  padding: 12px;
-      font-size: 12px;
-      font-weight: 500;
-	}
+#myTable thead {
+    position: sticky;
+    background: #00838f;
+}
 
-	#myTable tr {
-	  border-bottom: 1px solid #ddd;
-	}
+#myTable th {
+    font-size: 13px;
+}
 
-	.attribute_buttons_active{
-		box-shadow: 10px 5px 5px #ff9119;
-	}
-	/* #myTable tr.header, #myTable tr:hover {
+#myTable th,
+#myTable td {
+    text-align: left;
+    padding: 12px;
+    font-size: 12px;
+    font-weight: 500;
+}
+
+#myTable tr {
+    border-bottom: 1px solid #ddd;
+}
+
+.attribute_buttons_active {
+    box-shadow: 10px 5px 5px #ff9119;
+}
+
+/* #myTable tr.header, #myTable tr:hover {
 	  background-color: #f1f1f1;
 	} */
 /* .accordion-item-header svg path {
     fill: #00838f;
 } */
+
+.accordion-item-headers.accordion-item-headers-inner.active::after,
+.accordion-item-headers.accordion-item-headers-innerchild.active::after {
+    background-color: #008c99;
+    border: 1px solid #008c99;
+    background-image: url(https://bodypoint.dev/wp-content/uploads/2024/06/caret-white.svg);
+    color: #fff;
+}
+
+.accordion-item-headers-inner::after,
+.accordion-item-headers-innerchild::after {
+    right: unset;
+    left: 0;
+    top: 0px;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #CFCFCF;
+    background-color: #ECEDED;
+}
+
+.accordion-item-headers-inner.active,
+.accordion-item-headers-innerchild.active {
+    background-color: transparent;
+    color: #000;
+}
+
 /*single product page end */
-.product-images-box .slider-for  .slick-slide  {
+.product-images-box .slider-for .slick-slide {
     border: 1px solid #ececec;
     display: flex;
     align-items: center;
@@ -411,27 +456,33 @@ body {
     height: 100%;
     min-height: 541px;
 }
-.product-images-box .slider-nav  .slick-slide {
+
+.product-images-box .slider-nav .slick-slide {
     border: 1px solid #ececec;
     display: flex;
     align-items: center;
     padding: 12px;
 }
-.product-images-box .slider-nav  .slick-track {
+
+.product-images-box .slider-nav .slick-track {
     display: inline-flex;
     gap: 12px;
 }
+
 .product-images-box .slider-for .slick-list {
     width: calc(100% - 16px);
     margin: 0 auto 24px;
 }
+
 .product-outer-box {
     width: 50%;
 }
+
 .out-off-stock {
     text-align: right;
     margin-top: 7px;
 }
+
 .out-off-stock h1 {
     display: inline-block;
     color: red;
@@ -442,46 +493,54 @@ body {
     font-family: system-ui;
     font-size: 14px;
 }
-.place_order_form{
+
+.place_order_form {
     text-align: right;
     display: flex;
     justify-content: end;
 }
-.swal-button-color{
-    box-shadow: none!important;
+
+.swal-button-color {
+    box-shadow: none !important;
 }
 
 /* vault page */
 .accordion-item-headers.active {
-  background: #00838f;
-  color: #fff;
+    background: #00838f;
+    color: #fff;
 }
+
 .accordion-item-headers.accordion-item-headers-first.active {
-  border-radius: 16px 16px 0 0;
+    border-radius: 16px 16px 0 0;
 }
+.accordion-item-body-content-inner {
+    border: 0;
+    padding: 0;
+}
+
 .accordion-item-headers::after {
-  content: "";
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: 14px;
-  font-size: inherit;
-  text-rendering: auto;
-  margin-right: 0;
-  transition: transform 0.3s;
-  position: absolute;
-  right: 15px;
-  top: 14px;
-  background-color: #f6f6f6;
-  background-image: url(https://bodypoint.dev/wp-content/uploads/2024/06/caret-bottom.svg);
-  background-repeat: no-repeat;
-  background-size: 12px;
-  background-position: center center;
-  width: 32px;
-  height: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 3px;
+    content: "";
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: 14px;
+    font-size: inherit;
+    text-rendering: auto;
+    margin-right: 0;
+    transition: transform 0.3s;
+    position: absolute;
+    right: 15px;
+    top: 14px;
+    background-color: #f6f6f6;
+    background-image: url(https://bodypoint.dev/wp-content/uploads/2024/06/caret-bottom.svg);
+    background-repeat: no-repeat;
+    background-size: 12px;
+    background-position: center center;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
 }
 
 .accordion-item-headers.active::after {
@@ -490,7 +549,38 @@ body {
 }
 
 .accordion-item-body {
-  transition: max-height 0.2s ease-out;
+    transition: max-height 0.2s ease-out;
+}
+.accordion-item-headers-inner::after, .accordion-item-headers-innerchild::after {
+    width: 20px;
+    height: 20px;
+    top: 0;
+}
+.accordion-item-headers-innerchild {
+    padding: 0 0 0 28px;
+}
+.accordion-item-headers.accordion-item-headers-inner.active, .accordion-item-headers.accordion-item-headers-innerchild.active {
+    background-color: transparent;
+    color: #000;
+}
+.accordion-item-body-content-inner ul {
+    margin-bottom: 16px;
+}
+ul.active_campaigns {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px 8px;
+}
+ul.active_campaigns li {
+    width: 50px;
+    height: 50px;
+    background: #fff;
+    border: 1px solid #E3E3E3;
+    padding: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
 }
 /* end vault page */
 
@@ -507,14 +597,17 @@ body {
         grid-template-columns: 1fr;
         row-gap: 0px;
     }
+
     .ctm-grd-two {
         grid-template-columns: 1fr;
         gap: 10px;
     }
+
     .prd-img {
         height: auto;
         padding: 10px !important;
     }
+
     .ctm-pt {
         padding-top: 20px;
     }
@@ -530,6 +623,7 @@ body {
     .product-grid-three {
         grid-template-columns: 1fr 1fr;
     }
+
     .grid-four {
         grid-template-columns: 1fr;
     }
@@ -539,9 +633,11 @@ body {
     .prodct-Category {
         grid-template-columns: 1fr;
     }
+
     .grid-four {
         grid-template-columns: 1fr;
     }
+
     .detactor-right button {
         margin-bottom: 5px;
         margin-right: 0px;
@@ -552,6 +648,7 @@ body {
     .prodct-Category {
         grid-template-columns: 1fr;
     }
+
     .product-grid-three {
         grid-template-columns: 1fr 1fr;
     }
@@ -561,16 +658,20 @@ body {
     .grid-four {
         grid-template-columns: 1fr;
     }
+
     .ctm-price {
         grid-template-columns: 1fr;
     }
+
     .text-set {
         text-align: left;
     }
+
     .right-price {
         justify-content: start;
         margin-top: 10px;
     }
+
     .img-display {
         height: 400px;
     }
@@ -583,6 +684,7 @@ body {
         flex-wrap: wrap;
         justify-content: center;
     }
+
     .img-item {
         width: 45%;
         display: flex;
@@ -595,9 +697,11 @@ body {
     .prodct-Category {
         grid-template-columns: 1fr;
     }
+
     .product-grid-three {
         grid-template-columns: 1fr;
     }
+
     .ctm-container-two {
         padding: 0px 15px;
     }
@@ -610,20 +714,25 @@ body {
         grid-template-columns: 1fr;
         gap: 15px;
     }
+
     .accordion-item-header {
         font-size: 18px;
     }
+
     .ctm-container-two {
         padding: 0 15px;
     }
+
     .detactor {
         display: flex;
         gap: 16px;
         justify-content: space-between;
     }
+
     .product-details p {
         text-align: center;
     }
+
     .prd-img {
         border-style: solid;
         border-width: 1px 1px 1px 1px;
@@ -633,6 +742,7 @@ body {
         padding: 10px;
         min-height: 80px;
     }
+
     .ctm-grd-two {
         display: flex;
         gap: 15px;
@@ -640,9 +750,11 @@ body {
         border-bottom: 1px solid #f5f5f7;
         padding: 10px 0;
     }
+
     .prd-cntnt {
         flex: 1;
     }
+
     .prd-img img {
         width: 80px;
         height: 80px;
