--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -69,7 +69,13 @@ h1,h2,h3,h4,h5,h6,span,strong,a,button,select,p,div {
     margin-right: auto;
 }
 
+.five-content {
+    text-align: left;
+}
 
+.detactor-right button {
+    border-radius: 8px;
+}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -207,16 +213,15 @@ h1,h2,h3,h4,h5,h6,span,strong,a,button,select,p,div {
 }
 
 .accordion-item-header {
-    padding: 1.5rem 3rem 1.5rem 1rem;
-    min-height: 3.5rem;
-    line-height: 1.25rem;
-    font-size: 24px;
-    font-weight: 600;
+    padding: 15px;
+    line-height: 1.25em;
+    font-size: 22px;
+    font-weight: 500;
     display: flex;
     align-items: center;
     position: relative;
     cursor: pointer;
-    /* background-color: #f6f6f6; */
+    letter-spacing: 1.5px;
 }
 
 .accordion-item-header::after {
@@ -414,7 +419,7 @@ h1,h2,h3,h4,h5,h6,span,strong,a,button,select,p,div {
 }
 
 .attribute_buttons_active {
-    box-shadow: 10px 5px 5px #ff9119;
+    box-shadow: 2px 2px 5px #ff911940;
 }
 
 /* #myTable tr.header, #myTable tr:hover {
@@ -758,6 +763,10 @@ ul.active_campaigns li {
     .prd-cntnt {
         flex: 1;
     }
+}
 
-
+@media  (max-width: 400px) {
+.mobileLeft-Sidebar {
+        width: 318px;
+    }
 }
